force-app/src/objects/TR1__ATS_Job_AppV2_Picklist_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Job and Application V2 recordType picklist mapping.</description>
    <fields>
        <fullName>TR1__Applicable_Stages__c</fullName>
        <label>Applicable Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Available_Stages_for_Quick_Add__c</fullName>
        <description>Specifies the stages that are available for Application creation functionality for a given Job Record Type. If left blank, all stages are available. The Stage names should be separated by &apos;,&apos;.</description>
        <inlineHelpText>Specifies the stages that are available for Application creation functionality for a given Job Record Type. If left blank, all stages are available. Please enter the Stage names, separated by &apos;,&apos;.</inlineHelpText>
        <label>Available Stages on Application creation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__RecordType_DeveloperName__c</fullName>
        <label>RecordType DeveloperName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ATS Job AppV2 Picklist Mapping</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Applicable_Stages__c</columns>
        <columns>TR1__RecordType_DeveloperName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>